// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifApp /> should show a list of categories 1`] = `
<div>
  <h2>
    Gif App
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</div>
`;

exports[`Pruebas en <GifApp /> should show the app component successfully 1`] = `
<div>
  <h2>
    Gif App
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</div>
`;
